--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ animation: glowPulse 2s infinite;
 
 <!-- BACKGROUND MUSIC -->
 <audio id="bgMusic" loop>
-<source src="music.mp3" type="audio/mp3">
+<source src="mussic.mp3" type="audio/mp3">
 </audio>
 
 <!-- SCREEN 1 -->
@@ -323,3 +323,4 @@ document.getElementById("finalScreen").classList.add("active");
 </script>
 </body>
 </html>
+
