--- a/index.html
+++ b/index.html
@@ -247,7 +247,9 @@ document.getElementById("screen2").classList.add("active");
 
 const letterText=`Hey Disha 🌸
 
-From the moment you came into my life, everything started feeling brighter... 💖`;
+From the moment you came into my life, everything started feeling a little brighter and a little warmer. You have this beautiful way of turning ordinary moments into something special without even trying. Your smile has the power to change my mood instantly, and your presence makes everything feel calm and right. Being with you feels like home, like a place where I can be myself without any fear or pretence. I admire your kindness, your strength, and the way you understand things without many words. This Valentine’s Day isn’t just about asking a question, it’s about celebrating you and the happiness you bring into my life every single day. Thank you for being you, for choosing me, and for making life feel so much more meaningful. 🎶🤍
+
+loveee uhhh so muchhhh bbg,mwahhh 💋`;
 
 function openGift(){
 const div=document.createElement("div");
@@ -323,4 +325,5 @@ document.getElementById("finalScreen").classList.add("active");
 </script>
 </body>
 </html>
+
 
